Scroll to top on new page load and fix comments container overflow

--- a/src/features/Comment/Comment.css
+++ b/src/features/Comment/Comment.css
@@ -21,4 +21,5 @@
 
 .comment-text {
   margin-top: 20px;
+  word-break: break-all;
 }
